# ATSDB

./: CMakeLists.txt  conanfile.txt
src/: atsdb.cpp
src/asterix/: asterixconfigwidget.h  asterixeditioncombobox.h  asterixframingcombobox.h  asterixrefeditioncombobox.h  asterixspfeditioncombobox.h  asterixstatusdialog.h
src/buffer/: nullablevector.h
src/client/: client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  managementwidget.cpp  managementwidget.h
src/connection/: dbconnection.h  mysqlppconnection.cpp  mysqlppconnectioninfowidget.cpp  mysqlppconnectioninfowidget.h  mysqlppconnectionwidget.cpp  mysqlppconnectionwidget.h  mysqlserverwidget.cpp  mysqlserverwidget.h  sqliteconnection.cpp  sqliteconnectioninfowidget.cpp  sqliteconnectioninfowidget.h  sqliteconnectionwidget.cpp  sqliteconnectionwidget.h
src/filter/: datasourcesfilterwidget.cpp  datasourcesfilterwidget.h  dbfilter.cpp  dbfiltercondition.cpp  dbfiltercondition.h  dbfilterwidget.cpp  dbfilterwidget.h  filterconditionoperatorcombobox.h  filterconditionresetvaluecombobox.h  filtereditwidget.cpp  filtereditwidget.h  filtergeneratorwidget.cpp  filtergeneratorwidget.h  filtermanager.h  filtermanagerwidget.cpp  filtermanagerwidget.h
src/gui/: invalidqlineedit.h
src/interface/: dbinterface.cpp  dbinterface.h  dbinterfaceinfowidget.cpp  dbinterfaceinfowidget.h  dbinterfacewidget.cpp  dbinterfacewidget.h
src/job/: createartasassociationsjob.cpp  finalizedboreadjob.cpp  job.h  jobmanager.cpp  jobmanager.h  jobmanagerwidget.cpp  jobmanagerwidget.h
src/json/: jsondatamappingwidget.cpp  jsondatamappingwidget.h  jsonobjectparserwidget.cpp  jsonobjectparserwidget.h
src/object/: dboaddschemametatabledialog.h  dbobject.h  dbobjectcombobox.h  dbobjectinfowidget.cpp  dbobjectinfowidget.h  dbobjectmanager.cpp  dbobjectmanager.h  dbobjectmanagerloadwidget.cpp  dbobjectmanagerloadwidget.h  dbobjectmanagerwidget.cpp  dbobjectmanagerwidget.h  dbobjectwidget.cpp  dbobjectwidget.h  dbolabeldefinition.h  dbolabeldefinitionwidget.cpp  dbolabeldefinitionwidget.h  propertydatatypecombobox.h  selectdbobjectdialog.h  stringrepresentationcombobox.h
src/object/source/: dboadddatasourcedialog.h  dbodatasource.h  dbodatasourcedefinition.h  dbodatasourcedefinitionwidget.cpp  dbodatasourcedefinitionwidget.h  dbodatasourceselectioncombobox.h  dbodatasourcewidget.cpp  dbodatasourcewidget.h  dboeditdatasourceactionoptionswidget.cpp  dboeditdatasourceactionoptionswidget.h  dboeditdatasourceswidget.cpp  dboeditdatasourceswidget.h  storeddbodatasource.h  storeddbodatasourcewidget.cpp  storeddbodatasourcewidget.h
src/object/variable/: dbovariable.h  dbovariabledatatypecombobox.h  dbovariableorderedsetwidget.cpp  dbovariableorderedsetwidget.h  dbovariableselectionwidget.cpp  dbovariableselectionwidget.h  dbovariablesetwidget.h  dbovariablewidget.cpp  dbovariablewidget.h  metadbovariablewidget.cpp  metadbovariablewidget.h
src/projection/: projectionmanagerwidget.cpp  projectionmanagerwidget.h
src/schema/: dbschema.h  dbschemamanager.cpp  dbschemamanager.h  dbschemamanagerwidget.cpp  dbschemamanagerwidget.h  dbschemaselectioncombobox.h  dbschemawidget.cpp  dbschemawidget.h  dbtablecolumncombobox.h  dbtablewidget.cpp  dbtablewidget.h  metadbtablewidget.cpp  metadbtablewidget.h
src/task/: asteriximportertask.h  asteriximportertaskwidget.h  createartasassociationsstatusdialog.cpp  createartasassociationsstatusdialog.h  createartasassociationstask.cpp  createartasassociationstask.h  createartasassociationstaskwidget.cpp  createartasassociationstaskwidget.h  jsonimportertask.cpp  jsonimportertask.h  jsonimportertaskwidget.cpp  jsonimportertaskwidget.h  radarplotpositioncalculatortask.cpp  radarplotpositioncalculatortask.h  radarplotpositioncalculatortaskwidget.cpp  radarplotpositioncalculatortaskwidget.h
src/unit/: unitselectionwidget.h
src/util/: datatypeformatselectionwidget.h  files.cpp  files.h  formatselectionwidget.h  global.h.in
src/view/: viewcontainer.cpp  viewcontainer.h  viewcontainerconfigwidget.cpp  viewcontainerconfigwidget.h  viewcontainerwidget.cpp  viewcontainerwidget.h  viewmanager.cpp  viewmanager.h  viewmanagerwidget.cpp  viewmanagerwidget.h
src/view/listboxview/: allbuffertablemodel.cpp  allbuffertablemodel.h  allbuffertablewidget.cpp  allbuffertablewidget.h  buffertablemodel.cpp  buffertablemodel.h  buffertablewidget.cpp  buffertablewidget.h  listboxview.cpp  listboxviewconfigwidget.cpp  listboxviewconfigwidget.h  listboxviewdatasource.cpp  listboxviewdatasource.h  listboxviewdatawidget.cpp  listboxviewdatawidget.h  listboxviewwidget.cpp
src/view/viewbase/: dbviewmodel.h  eventprocessor.h  view.cpp  view.h  viewmodel.h  viewselection.h  viewwidget.h
